# STAT

./: .gitignore  Analysis Walkthrough Complete (Questions).ipynb  CMSPhotonJet.ipynb  Example.ipynb  JetScapeSummerSchoolHandsOnSession-Answers.ipynb  JetScapeSummerSchoolHandsOnSession-Part2-Answers.ipynb  JetScapeSummerSchoolHandsOnSession-Part2.ipynb  JetScapeSummerSchoolHandsOnSession.ipynb  JetScapeSummerSchoolHardSkeleton.ipynb  JetScapeSummerSchoolHomework.ipynb  LICENSE  MatterLBT1.ipynb  README.md  Tutorial.ipynb  Uncertainty Hands-on Session.ipynb  Winter School (Questions).ipynb  Winter School Exercises (Answers).ipynb  WinterSchoolQuestions.ipynb  coin_tosses.txt  countries.txt  epem-tune.ipynb  hands-on-2022.ipynb  indices.txt  mod_dat.p  pp-analysis.ipynb  pp-tune.ipynb  pyproject.toml  requirements.txt  scores.txt  unknown_mean.txt  vac-tune.ipynb
.ipynb_checkpoints/: Analysis Walkthrough Complete (Questions)-checkpoint.ipynb  Tutorial-checkpoint.ipynb  Winter School (Questions)-checkpoint.ipynb  Winter School Exercises (Answers)-checkpoint.ipynb
config/: epem.yaml  expdata_config_sample.yaml  mydata.yaml  pp.yaml
doc/: Makefile  conf.py  index.rst  modules.rst
download_data/: edit_data.py  expdata_config_sample.yaml  get_expdata.py  get_hepdata.py  get_phenix.py
input/: default.p
jetscape_stat/: __init__.py  design.py  emulator.py  mcmc.py  plots.py  reader.py
src/: __init__.py  design.py  edit_data.py  emulator.py  expdata_config_sample.yaml  expt.py  get_expdata.py  get_hepdata.py  get_phenix.py  init_backup.py  mcmc.py  model.py  myplot.py  (+2 more)
(+12 files in other folders)
